# madmax-artiq-env

./: README.md
entagnler/: dataset_db.mdb-lock  device_db.py  flake.nix  pyproject.toml  run_artiq.sh  settings.toml
entagnler/artiq_entangler_bridge/: kasli_gen.py
entagnler/repository/: basic_experiment.py
entagnler/results/2026-02-10/15/: 000000013-EntanglerDemo.h5  000000014-EntanglerDemo.h5  000000015-EntanglerDemo.h5  000000016-EntanglerDemo.h5  000000017-EntanglerDemo.h5  000000018-EntanglerDemo.h5  000000019-EntanglerDemo.h5
entagnler/results/2026-02-11/11/: 000000022-EntanglerDemo.h5
entagnler/test/: gater_untriggered_test.py  test_channel_sequencer[check_output_glitch].vcd  test_channel_sequencer[check_sequencer_timing].vcd  test_core_basic.vcd  test_entangler_core.py  test_entangler_core[standalone_test].vcd  test_gating.py  test_ion_photon.py  test_msm_pair.vcd  test_msm_standalone.vcd  test_one_pattern[pattern0].vcd  test_pattern_matcher.py  test_phy.py  test_phy_basic.vcd  test_phy_func[basic_phy_check].vcd  test_phy_func[check_phy_timeout].vcd  test_triggered_gater[20-20-30-20].vcd  test_triggered_gater[20-8-25-20].vcd  test_triggered_gater[21-20-30-20].vcd  test_triggered_gater[21-8-25-20].vcd  test_triggered_gater[22-20-30-20].vcd  test_triggered_gater[22-8-25-20].vcd  test_triggered_gater[23-20-30-20].vcd  test_triggered_gater[23-8-25-20].vcd  test_triggered_gater[24-20-30-20].vcd  test_triggered_gater[24-8-25-20].vcd  test_triggered_gater[25-20-30-20].vcd  test_triggered_gater[25-8-25-20].vcd  test_triggered_gater[26-20-30-20].vcd  test_triggered_gater[26-8-25-20].vcd  test_triggered_gater[27-20-30-20].vcd  test_triggered_gater[27-8-25-20].vcd  test_triggered_gater[28-20-30-20].vcd  test_triggered_gater[28-8-25-20].vcd  test_triggered_gater[29-20-30-20].vcd  test_triggered_gater[29-8-25-20].vcd  test_triggered_gater[30-20-30-20].vcd  test_triggered_gater[30-8-25-20].vcd  test_triggered_gater[31-20-30-20].vcd  test_triggered_gater[31-8-25-20].vcd  (+49 more)
entagnler/test/helpers/: coretester.py  phytester.py
main/: pyproject.toml
(+2 files in other folders)
